Página de inicio: Falta completar la funcionalidad de búsqueda y mejorar el look and feel. Sección de tags/chips con alimentos encontrados en cámara. Migración a AndroidX

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="todo">TODO</string>
     <string name="alimentos_e">Alimentos encontrados</string>
     <string name="tomate">tomate</string>
+    <string name="title_activity_foods_found_camera">FoodsFoundCameraActivity</string>
 </resources>
